Prejecto coffee-store finalizado

--- a/styles.css
+++ b/styles.css
@@ -104,7 +104,7 @@ section {
     line-height: 1.8;
     color: var(--white);
     padding: 1rem 0;
-    width: 600px;
+    width: 400px;
     text-align: justify;
 }
 
@@ -117,4 +117,146 @@ section {
     cursor: pointer;
     margin-top: 1rem;
     display: inline-block;
+}
+
+.btn:hover {
+    letter-spacing: 0.1rem;
+}
+
+.title {
+    font-size: 4rem;
+    text-align: center;
+    color: var(--main-color);
+    text-transform: uppercase; /* colocar tudo em letra maiúscula*/
+    margin-bottom: 4rem;
+}
+
+.title span {
+    color: var(--white);
+    text-transform: uppercase;
+}
+
+.about .row {
+    display: flex;
+    align-items: center;
+    background-color: var(--black);
+    gap: 1.5rem 0rem; 
+}
+
+.about .row .content {
+    padding: 2rem;
+}
+
+.about .row .content h3 {
+    font-size: 3rem;
+    color: var(--white);
+}
+
+.about .row .content p {
+    font-size: 1.6rem;
+    color: var(--white);
+    padding: 1rem 0;
+    line-height: 1.8;
+}
+
+/* Início da seção menu */
+.box-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(31rem, 1fr));
+    gap: 1,5rem;
+}
+
+.menu .box-container .box {
+    text-align: center;
+    border: var(--border);
+    padding: 5rem;
+    cursor: pointer;
+}
+
+.menu .box-container .box img {
+    height: 10rem;
+}
+
+.menu .box-container .box h3 {
+    color: var(--white);
+    font-size: 2rem;
+    padding: 1rem 0;
+}
+
+.menu .box-container .box .price{
+    color: var(--white);
+    font-size: 2.5rem;
+    padding: 0.5rem 0;
+}
+
+.menu .box-container .box .price span{
+    font-size: 1.5rem;
+    text-decoration: line-through;
+    font-weight: 100;
+}
+
+/* Foi colocado aqui e não perto da origem por causa do efeito cascata */
+.menu .box-container .box:hover {
+    background-color: var(--white);
+}
+
+.menu .box-container .box:hover>* { /* o asterístico troca a cor de todo mundo*/
+    color: var(--black);
+}
+
+/* Seção nossos clientes */
+
+.review .box-container .box {
+    border: var(--border);
+    text-align: center;
+    padding: 3rem 1rem;
+}
+
+.review .box-container .box p {
+    font-weight: lighter;
+    font-size: 1.5rem;
+    color: var(--white);
+    padding: 2rem 0;
+    line-height: 1.8;
+}
+
+.review .box-container .box h3{
+    color: var(--white);
+    font-size: 2rem;
+    margin: 1rem 0;
+}
+
+.review .box-container .box .user {
+    height: 7rem;
+    width: 7rem;
+    border-radius: 50%;
+}
+
+/* Seção edereço */
+
+.address {
+    display: flex;
+    align-items: center;
+    flex-direction: column; /* Colocar como uma coluna uma do lado da outra*/
+}
+
+/* Seção footer */
+
+.footer {
+    text-align: center;
+}
+
+.footer .share {
+    padding: 1rem 0;
+}
+
+.footer .share img {
+    margin: 0.3;
+    cursor: pointer;
+    border-radius: 50%;
+    padding: 1rem;
+}
+
+.footer .share img:hover{
+    background-color: var(--main-color);
 }
